[package]
name = "quicktest"
version = "1.0.1"
authors = ["Luis Miguel Báez <es.luismiguelbaez@gmail.com>"]
license = "MIT"
description = "Command Line Interface (CLI) for stress testing for competitive programming contest"
readme = "README.md"
repository = "https://github.com/LuchoBazz/quicktest"
keywords = ["cli", "stress-testing", "cp-tool", "testing", "testing-tool"]
categories = ["cli"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["docs/*", "examples/*", "*.md", "website/*"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
clap = "4.4"
colored = "2.0.4"
difference = "2.0.0"
exitcode = "1.1.2"
exitfailure = "0.5.1"
failure = "0.1.8"
glob = "0.3.1"
pad = "0.1.6"
process_control = "4.0.3"
rand = "0.8.5"
regex = "1.10.2"
shellexpand = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
separator = "0.4.1"
structopt = "0.3"
yaml-rust = "0.4"
async-std = "1.12.0"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "3.0.2"

[[bin]]
name = "quicktest"
path = "src/main.rs"

[[bin]]
name = "qt"
path = "src/main.rs"
