[package]
name = "quicktest"
version = "1.0.10"
authors = ["Luis Miguel Báez <es.luismiguelbaez@gmail.com>"]
license = "MIT"
description = "Quick Test CLI: A Cross-Platform for Automated Testing in Competitive Programming"
readme = "README.md"
repository = "https://github.com/LuchoBazz/quicktest"
keywords = ["cli", "stress-testing", "cp-tool", "testing", "testing-tool"]
categories = ["command-line-interface"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["docs/*", "examples/*", "*.md", "website/*"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
clap = "4.5"
colored = "3.0.0"
difference = "2.0.0"
exitcode = "1.1.2"
exitfailure = "0.5.1"
failure = "0.1.8"
glob = "0.3.3"
pad = "0.1.6"
process_control = "5.2.0"
rand = "0.9.2"
rand_distr = "0.5"
regex = "1.12.2"
shellexpand = "3.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
separator = "0.4.1"
structopt = "0.3"
yaml-rust = "0.4"
async-std = "1.13.2"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"

[[bin]]
name = "quicktest"
path = "src/main.rs"

[[bin]]
name = "qt"
path = "src/main.rs"
